--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,6 +80,9 @@
           <a href="/appeal/full/">Full planning</a>
         </li>
         <li>
+          <a href="/appeal/cas-adverts/v1/">CAS and adverts</a>
+        </li>
+        <li>
           <a href="/appeal/final-comments/">Final comments for full planning</a>
         </li>
         <li>
