Routing Before you start for the CAS and advert appeal journey

--- a/app/views/appeal/cas-adverts/v1/cas-planning-type.html
+++ b/app/views/appeal/cas-adverts/v1/cas-planning-type.html
@@ -6,7 +6,7 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {{ govukCheckboxes({
-  name: "waste",
+  name: "cas-planning-type",
   fieldset: {
     legend: {
       text: "Was your application about any of the following?",
@@ -44,4 +44,5 @@
     }
   ]
 }) }}
+
 {% endblock %}
