--- a/app/views/appeal/cas-adverts/v1/planning/decision-date.html
+++ b/app/views/appeal/cas-adverts/v1/planning/decision-date.html
@@ -1,1 +1,37 @@
-{% extends location+"common/decision-date.html" %}
+{% extends '_layouts/layout-main.html' %}
+
+{% set title = 'What’s the date on the decision letter from the local planning authority?' %}
+
+{% block questions %}
+	{{ govukDateInput({
+		id: 'decision-date',
+		namePrefix: 'decision-date',
+		fieldset: {
+			legend: {
+				html: title,
+				classes: 'govuk-fieldset__legend--l',
+				isPageHeading: true
+			}
+		},
+		hint: {
+			html: 'For example, 31 3 2024'
+		},
+		items: [
+			{
+				name: 'day',
+				classes: 'govuk-input--width-2',
+				value: data['decision-date-day']
+			},
+			{
+				name: 'month',
+				classes: 'govuk-input--width-2',
+				value: data['decision-date-month']
+			},
+			{
+				name: 'year',
+				classes: 'govuk-input--width-4',
+				value: data['decision-date-year']
+			}
+		]
+	}) }}
+{% endblock %}
