Interested party service updates for age declaration and data privacy, always anonymous and some question page pattern updates

--- a/app/views/interested/comment/v11/confirmation.html
+++ b/app/views/interested/comment/v11/confirmation.html
@@ -28,14 +28,18 @@
         </div>
       </div>
 
-      <p class="govuk-body">We’ve sent you a confirmation email.</p>
+      <p class="govuk-body">If you entered your email address, we’ve sent you a confirmation email.</p>
 
       <h2 class="govuk-heading-m">
         What happens next
       </h2>
 
       <p class="govuk-body">
-        The inspector will review all the evidence and make their decision. The Planning Inspectorate will contact you by email when the final decision has been made.
+        If your comment includes sensitive information we may redact or reject it.
+      </p>
+
+      <p class="govuk-body">
+        The inspector will review all the evidence. We will contact you by email when we make a decision.
       </p>
 
       <p class="govuk-body">
