--- a/app/views/interested/comment/v11/postcode-check.html
+++ b/app/views/interested/comment/v11/postcode-check.html
@@ -16,8 +16,7 @@
       }
     },
     hint: {
-      html: "<p class='govuk-body'>If your address is near the appeal site, your comment will have more weight when we decide the appeal.</p>
-      <p class='govuk-body'>We will not publish or share your postcode.</p>"
+      html: "If your address is near the appeal site, we will consider your comment as more important. We will not publish or share your postcode."
     },
     items: [
       {
