--- a/app/views/interested/comment/v11/postcode.html
+++ b/app/views/interested/comment/v11/postcode.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What is your postcode?' %}
+{% set title = 'What is the first part of your postcode?' %}
 
 {% block questions %}
 
@@ -11,7 +11,7 @@
       isPageHeading: true
     },
     hint: {
-      text: "This is the first part of your postcode, for example BS1"
+      text: "For example, WC1N, BS5, GU16 or L1"
     },
     id: "postcode",
     name: "postcode",
