--- a/app/views/interested/comment/v11/your-name.html
+++ b/app/views/interested/comment/v11/your-name.html
@@ -35,7 +35,7 @@
         </legend>
 
         <p class="govuk-body">
-          We need your name to link you to your comment, this is helpful if you need to contact us. We will not publish your name or share it with the main parties.
+          We will not publish your name or share it with the main parties.
         </p>
 
         <div class="govuk-form-group">
@@ -53,7 +53,7 @@
         </div>
 
         <!-- <section class="govuk-!-margin-bottom-9">
-          
+
           {{ govukCheckboxes({
             name: "siteVisit",
             fieldset: {
