--- a/app/views/interested/find-appeal/v11/appeal-details.html
+++ b/app/views/interested/find-appeal/v11/appeal-details.html
@@ -76,10 +76,20 @@
       </p>
 
       {{ govukButton({
-        href: "/interested/comment/v9/your-name",
+        href: "/interested/comment/v11/age-declaration",
         text: "Comment on this appeal",
         classes: "govuk-button--secondary govuk-!-margin-bottom-1"
       }) }}
+
+      {% if data['procedure'] == 'hearing' %}
+        {{ govukInsetText({
+          text: "The hearing will start on "+ 22 | daysInFuture +"."
+        }) }}
+      {% elseif data['procedure'] == 'inquiry' %}
+        {{ govukInsetText({
+          text: "The inquiry will start on "+ 22 | daysInFuture +"."
+        }) }}
+      {% endif %}
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
