--- a/app/views/interested/comment/v11/add-comments.html
+++ b/app/views/interested/comment/v11/add-comments.html
@@ -32,15 +32,7 @@
       <form method="post">
 
         <p class="govuk-body">
-          Let us know why you do, or do not, support this appeal against a local authority’s planning decision.
-        </p>
-
-        <!-- <p class="govuk-body">
-          You must be over 18 to comment on an appeal.
-        </p> -->
-
-        <p class="govuk-body">
-          Your comment should:
+          Tell us why you do, or do not, support this appeal. Your comment should:
         </p>
 
         <ul class="govuk-list govuk-list--bullet">
@@ -51,36 +43,44 @@
             be based on facts related to the planning application
           </li>
           <li>
-            reference relevant planning policies, for example, your Neighbourhood Plan, local district plans, community plans, environmental policies – you will find these on your local authority’s website
+            mention relevant planning policies (for example, local district or community plans)
           </li>
         </ul>
 
         <p class="govuk-body">
-          Your comment should not:
+          Do not include any sensitive information. We will reject your comment and you might miss the deadline to resubmit.
         </p>
-
-        <ul class="govuk-list govuk-list--bullet">
-          <li>
-            include personal opinion or rumour
-          </li>
-          <li>
-            use offensive language
-          </li>
-          <li>
-            include information that is not related to planning law, for example, criminal behaviour or someone’s personal characteristics
-          </li>
-        </ul>
 
         <details class="govuk-details" data-module="govuk-details">
           <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text">
-              Examples of personal characteristics
+              What is sensitive information?
             </span>
           </summary>
           <div class="govuk-details__text">
-            <!-- <p class="govuk-body">
-              Personal charachertistics include:
-            </p> -->
+
+            <p class="govuk-body">
+              Sensitive information refers to:
+            </p>
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li>
+                comments from children
+              </li>
+              <li>
+                information relating to children
+              </li>
+              <li>
+                information relating to health
+              </li>
+              <li>
+                information relating to crime
+              </li>
+            </ul>
+
+            <p class="govuk-body">
+              It also includes any information relating to an individual’s:
+            </p>
 
             <ul class="govuk-list govuk-list--bullet">
               <li>
@@ -111,13 +111,9 @@
                 sexual orientation
               </li>
             </ul>
+
           </div>
         </details>
-
-        <p class="govuk-body">
-          Any comment submitted that does not meet our criteria will be returned to you and you will be asked to resubmit it. This delay may cause you to miss the deadline to comment.
-        </p>
-
 
         {{ govukTextarea({
           name: 'comments',
@@ -128,19 +124,6 @@
             html: 'Your comments',
             classes: 'govuk-label--m'
           }
-        }) }}
-
-        {{ govukCheckboxes({
-          idPrefix: 'appeal-statement-confirmation',
-          name: 'appeal-statement-confirmation',
-          classes: 'checkboxes-long-text',
-          items: [
-            {
-              html: 'I confirm that I have not included any sensitive information in my comments.',
-              value: 'I confirm that I have not included any sensitive information in my comments.',
-              checked: checked('appeal-statement-confirmation','I confirm that I have not included any sensitive information in my comments.')
-            }
-          ]
         }) }}
 
         {{ govukButton({
