Content updates to withdrawn appeal

--- a/app/views/_includes/lpa/withdrawn-appeals.html
+++ b/app/views/_includes/lpa/withdrawn-appeals.html
@@ -8,11 +8,11 @@
       html: 'Appeal number'
     },
     {
-      html: 'Site address',
+      html: 'Address',
       classes: 'govuk-!-width-one-half'
     },
     {
-      html: 'Decision date'
+      html: 'Withdrawn date'
     },
     {
       html: 'Appeal type'
