--- a/app/views/_includes/lpa/decided-appeals.html
+++ b/app/views/_includes/lpa/decided-appeals.html
@@ -8,15 +8,15 @@
       html: 'Appeal number'
     },
     {
-      html: 'Site address',
+      html: 'Address',
       classes: 'govuk-!-width-one-half'
     },
     {
-      html: 'Decision date',
-      classes: 'govuk-!-width-one-third'
+      html: 'Appeal type'
     },
     {
-      html: 'Appeal type'
+      html: 'Decision date',
+      classes: 'govuk-!-width-one-quarter'
     },
     {
       html: 'Decision',
@@ -32,10 +32,10 @@
         html: '38 Tubular Way, Warbingham, BR11 7HA'
       },
       {
-        html: '8' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '8' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--yellow">Allowed in part</strong>'
@@ -49,10 +49,10 @@
         html: '3 Lawn Street, Giffleton, BR2 2BD'
       },
       {
-        html: '16' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '16' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--orange">Dismissed</strong>'
@@ -66,10 +66,10 @@
         html: '22 Bishop Close, Jamvillion, BX2 7PP'
       },
       {
-        html: '32' | daysInPastShort
+        html: 'S174'
       },
       {
-        html: 'S174'
+        html: '32' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--orange">Notice varied and upheld</strong>'
@@ -83,10 +83,10 @@
         html: '102 Haynesford Way, Adbridge, BR15 0PA'
       },
       {
-        html: '64' | daysInPastShort
+        html: 'HAS'
       },
       {
-        html: 'HAS'
+        html: '64' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -100,10 +100,10 @@
         html: '9 Westley Road, Rochdale, OL11 2AN'
       },
       {
-        html: '128' | daysInPastShort
+        html: 'S20'
       },
       {
-        html: 'S20'
+        html: '128' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -117,10 +117,10 @@
         html: '8 Knivvol Drive, Oldham, BR17 2GH'
       },
       {
-        html: '222' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '222' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -134,10 +134,10 @@
         html: '2 Tubular Way, Warbingham, BR12 2PD'
       },
       {
-        html: '265' | daysInPastShort
+        html: 'S20'
       },
       {
-        html: 'S20'
+        html: '265' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -151,10 +151,10 @@
         html: '2 Porter Road, Jampton, BR8 8AA'
       },
       {
-        html: '301' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '301' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -168,10 +168,10 @@
         html: '109 Channingford Hill, Salcombe, BR2 8HH'
       },
       {
-        html: '322' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '322' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
@@ -185,10 +185,10 @@
         html: '12a Malago Road, Chamford, BR07 2PD'
       },
       {
-        html: '365' | daysInPastShort
+        html: 'S78'
       },
       {
-        html: 'S78'
+        html: '365' | daysInPastShort
       },
       {
         html: ' <strong class="govuk-tag govuk-tag--green">Allowed</strong>'
