--- a/app/views/appeal/before-you-start/index.html
+++ b/app/views/appeal/before-you-start/index.html
@@ -23,7 +23,7 @@
 
     <section class="govuk-!-margin-bottom-6">
 
-      {% set version = "18" %}
+      {% set version = "19" %}
 
       <h2 class="govuk-heading-m">
         Version {{version}}
@@ -39,7 +39,13 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          CAS and advert appeal routing
+          routing for expedited appeal
+        </li>
+        <li>
+          flipped routing logic for enforcement question so you can skip through with continue (no option selected)
+        </li>
+        <li>
+          asking the commercial check (‘<a href='v19/commercial-check' class='govuk-link'>Was your application about any of the following?</a>’) as a boolean
         </li>
       </ul>
 
@@ -51,17 +57,35 @@
 
     </section>
 
+    {% set v18HTML %}
+
+      <section class="govuk-!-margin-bottom-6">
+
+        {% set version = "18" %}
+
+        <p class="govuk-!-margin-bottom-2">
+          Changes:
+        </p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            CAS and advert appeal routing
+          </li>
+        </ul>
+
+        {{ govukButton({
+          html: 'View prototype',
+          href: 'v'+version+'/',
+          isStartButton: true
+        }) }}
+
+      </section>
+
+    {% endset -%}
+
     {% set v17HTML %}
 
       {% set version = "17" %}
-
-      <h2 class="govuk-heading-m">
-        Version {{version}}
-        {{ govukTag({
-          classes: 'govuk-tag--green govuk-!-margin-left-2',
-          text: 'Ready for research'
-        }) }}
-      </h2>
 
       <p class="govuk-!-margin-bottom-2">
         Changes:
@@ -188,6 +212,14 @@
       classes: 'govuk-!-margin-top-9',
       items: [
 
+        {
+          heading: {
+            html: 'Version 18 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v18HTML
+          }
+        },
         {
           heading: {
             html: 'Version 17 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
